5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_1331.log
== TEST (2019-04-13 20:26:56) 
-- CODE:
guerreiros = 3
moedas = 50
 
print (moedas//guerreiros)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:29:04) 
-- CODE:
guerreiros = 3
moedas = 50
resto = moedas%guerreiros
 
print (moedas//guerreiros
		resto)
-- ERROR:
File "XXXX", line 6
    resto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:29:36) 
-- CODE:
guerreiros = 3
moedas = 50
resto = moedas%guerreiros
 
print (moedas//guerreiros)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:03:03) 
-- CODE:
guerreiros = 3
moedas = 50
resto = moedas%guerreiros
 
print (moedas//guerreiros)
print (resto)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:04:04) 
-- CODE:
guerreiros = 3
moedas = 50
resto = moedas%guerreiros
 
print (moedas//guerreiros)
print (resto)
-- EXECUTION TIME:
0.12419
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
